TP#34539: Remove the visibility attribute from the active column instead of setting it directly

--- a/Code/ShipWorks.Products.UI/ProductsView.xaml
+++ b/Code/ShipWorks.Products.UI/ProductsView.xaml
@@ -334,8 +334,7 @@
                     Width="Auto"
                     CanUserSort="True"
                     Header="Active"
-                    SortMemberPath="IsActive"
-                    Visibility="Visible">
+                    SortMemberPath="IsActive">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <ToggleButton
