--- a/Code/ShipWorks.Shipping.UI/Settings/BestRateAccountSettingsControl.xaml
+++ b/Code/ShipWorks.Shipping.UI/Settings/BestRateAccountSettingsControl.xaml
@@ -39,7 +39,7 @@
                 Margin="30 0 0 0">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Grid>
+                        <Grid Margin="0 0 0 10">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
