--- a/Code/ShipWorks.OrderLookup/ScanToShipControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanToShipControl.xaml
@@ -9,7 +9,36 @@
              xmlns:orderlookup="clr-namespace:ShipWorks.OrderLookup.Controls.OrderLookup"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance local:ScanToShipViewModel}"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             FontFamily="Tahoma"
+             FontSize="11pt">
+    <UserControl.Resources>
+        <Style TargetType="{x:Type TabControl}">
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TabControl}">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="30px"/>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+
+                            <Border Grid.Row="0">
+                                <UniformGrid IsItemsHost="True" Rows="1"/>
+                            </Border>
+
+                            <Border Grid.Row="1"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    Background="{TemplateBinding Background}"
+                                    BorderBrush="{TemplateBinding BorderBrush}">
+                                <ContentPresenter x:Name="PART_SelectedContentHost" ContentSource="SelectedContent"/>
+                            </Border>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -19,12 +48,12 @@
             Grid.Row="0"
             Margin="10"
             DataContext="{Binding OrderLookupSearchViewModel}" IsEnabled="{Binding Enabled}"/>
-        <TabControl Grid.Row="1">
+        <TabControl Grid.Row="1">            
             <TabItem Header="Scan">
                 <scanpack:ScanPackControl DataContext="{Binding ScanPackViewModel}"></scanpack:ScanPackControl>
             </TabItem>
             <TabItem Header="Ship">
-                <orderlookup:MainOrderLookupControl DataContext="{Binding .OrderLookupViewModel}"></orderlookup:MainOrderLookupControl>
+                <orderlookup:MainOrderLookupControl DataContext="{Binding OrderLookupViewModel}"></orderlookup:MainOrderLookupControl>
             </TabItem>
         </TabControl>
     </Grid>
