TP#34598: Remove Pack tab from main form. Replace references to MainForm.IsScanPackActive with ScanToShipViewModel.IsPackTabActive.

--- a/Code/ShipWorks.OrderLookup/ScanToShipControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanToShipControl.xaml
@@ -48,7 +48,7 @@
             Grid.Row="0"
             Margin="10"
             DataContext="{Binding OrderLookupSearchViewModel}" IsEnabled="{Binding Enabled}"/>
-        <TabControl Grid.Row="1">            
+        <TabControl Grid.Row="1" SelectedIndex="{Binding SelectedTab}">
             <TabItem Header="Scan">
                 <scanpack:ScanPackControl DataContext="{Binding ScanPackViewModel}"></scanpack:ScanPackControl>
             </TabItem>
