TP#34598: Rename OrderLookupControlHost to ScanToShipControlHost

--- a/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ShipWorks.OrderLookup.ScanToShipControl"
+﻿<UserControl x:Class="ShipWorks.OrderLookup.ScanToShip.ScanToShipControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ShipWorks.OrderLookup"
+             xmlns:local="clr-namespace:ShipWorks.OrderLookup.ScanToShip"
              xmlns:orderLookupSearchControl="clr-namespace:ShipWorks.OrderLookup.Controls.OrderLookupSearchControl"
              xmlns:scanpack="clr-namespace:ShipWorks.OrderLookup.ScanPack"
              xmlns:orderlookup="clr-namespace:ShipWorks.OrderLookup.Controls.OrderLookup"
