--- a/Code/ShipWorks.Products.UI/Import/ProductImporterDialog.xaml
+++ b/Code/ShipWorks.Products.UI/Import/ProductImporterDialog.xaml
@@ -8,7 +8,7 @@
     xmlns:local="clr-namespace:ShipWorks.Products.UI.Import"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.shipworks.com/ui"
-    Title="Import Products"
+    Title="Add Products from File"
     Width="600"
     Height="375"
     FontFamily="/ShipWorks.UI;component/Styles/BlueSteel/#Roboto"
