TP#34542: Add styling to new add button

--- a/Code/ShipWorks.Products.UI/ProductsView.xaml
+++ b/Code/ShipWorks.Products.UI/ProductsView.xaml
@@ -79,24 +79,35 @@
                 Columns="7"
                 Rows="1">
                 <syncfusion:DropDownButtonAdv Name="AddProduct"
-                                           Label="Add"
-                                           Margin="0,0,10,0"
-                                           Height="30"
-                                           Width="200"
-                                           IconHeight="0">
+                                              Label="Add"
+                                              Foreground="White"
+                                              Background="{StaticResource LargePrimaryButtonGradient}"
+                                              BorderBrush="#0e497f"
+                                              BorderThickness="0"
+                                              Margin="0,0,10,0"
+                                              Height="30"
+                                              Width="200"
+                                              IconHeight="0"
+                                              TextBlock.FontSize="12"
+                                              TextBlock.FontWeight="Bold"
+                                              TextBlock.TextAlignment="Justify">
                     <syncfusion:DropDownMenuGroup>
                         <syncfusion:DropDownMenuItem Header="New Product"
+                                                     Name="Item1"
                                                      Command="{Binding AddProduct}"
-                                                     Height="30"
-                                                     Width="200"/>
+                                                     Width="200"
+                                                     Padding="3"
+                                                     />
                         <syncfusion:DropDownMenuItem Header="From File"
+                                                     Name="Item2"
                                                      Command="{Binding ImportProducts}"
-                                                     Height="30"
-                                                     Width="200"/>
+                                                     Width="200"
+                                                     Padding="3"/>
                         <syncfusion:DropDownMenuItem Header="Variant"
+                                                     Name="Item3"
                                                      Command="{Binding CopyAsVariant}"
-                                                     Height="30"
-                                                     Width="200"/>
+                                                     Width="200"
+                                                     Padding="3"/>
                     </syncfusion:DropDownMenuGroup>
                 </syncfusion:DropDownButtonAdv>
                 <Button
