--- a/Code/ShipWorks.OrderLookup/Controls/OrderLookupSearchControl/OrderLookupSearchControl.xaml
+++ b/Code/ShipWorks.OrderLookup/Controls/OrderLookupSearchControl/OrderLookupSearchControl.xaml
@@ -15,7 +15,8 @@
     FontSize="20px"
     Foreground="Black"
     Loaded="OnLoad"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    IsEnabled="{Binding Enabled}">
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -33,7 +34,6 @@
             </Style>
         </ResourceDictionary>
     </UserControl.Resources>
-
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
