TP#34598: Swap the search control view model based on the selected tab

--- a/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
@@ -47,7 +47,7 @@
         <orderLookupSearchControl:OrderLookupSearchControl
             Grid.Row="0"
             Margin="10"
-            DataContext="{Binding OrderLookupSearchViewModel}" IsEnabled="{Binding Enabled}"/>
+            DataContext="{Binding SearchViewModel}" IsEnabled="{Binding Enabled}"/>
         <TabControl Grid.Row="1" SelectedIndex="{Binding SelectedTab}">
             <TabItem Header="Scan">
                 <scanpack:ScanPackControl DataContext="{Binding ScanPackViewModel}"></scanpack:ScanPackControl>
