TP#35278: Move search properties in ScanPackViewModel to OrderLookupSearchViewModel. Use OrderLookupSearchViewModel in ScanToShipViewModel, passing in the selected tab. Create ScanToShipTab enum.

--- a/Code/ShipWorks.OrderLookup/Controls/OrderLookupSearchControl/OrderLookupSearchControl.xaml
+++ b/Code/ShipWorks.OrderLookup/Controls/OrderLookupSearchControl/OrderLookupSearchControl.xaml
@@ -163,9 +163,8 @@
         <TextBlock
             Grid.Row="1"
             Grid.Column="0"
-            Grid.ColumnSpan="3"
             Margin="0,8,0,0"
-            Text="{Binding SearchErrorMessage}"
-            Visibility="{Binding SearchError, Converter={StaticResource BoolToVis}}" />        
+            Text="{Binding SearchMessage}"
+            Visibility="{Binding ShowSearchMessage, Converter={StaticResource BoolToVis}}" />
     </Grid>
 </UserControl>
