--- a/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
@@ -43,7 +43,7 @@
         <Label Grid.Row="0" 
                Grid.Column="0" 
                Grid.ColumnSpan="3"
-               HorizontalAlignment="Left">Enter your Rakuten API Key:</Label>
+               HorizontalAlignment="Left">Enter your Rakuten API Credentials:</Label>
 
         <Label Grid.Row="1" 
                Grid.Column="1" 
@@ -74,7 +74,7 @@
         <TextBlock Grid.Column="2"
                    Grid.Row="4" 
                    TextWrapping="WrapWithOverflow">
-            For help getting your Rakuten API Key, 
+            For help getting your Rakuten API Credentials, 
             <!-- This needs changed to a rakuten article at some point-->
             <Hyperlink
                 NavigateUri="https://shipworks.zendesk.com/hc/en-us/articles/360022653991" ui:Link.OpenInBrowser="true">
