--- a/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="ShipWorks.Stores.UI.Platforms.Overstock.OverstockStoreSetupControl"
+﻿<UserControl x:Class="ShipWorks.Stores.UI.Platforms.Rakuten.RakutenStoreSetupControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ShipWorks.Stores.UI.Platforms.Overstock"
+             xmlns:local="clr-namespace:ShipWorks.Stores.UI.Platforms.Rakuten"
              xmlns:ui="http://schemas.shipworks.com/ui"
              mc:Ignorable="d" 
              
