--- a/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
@@ -52,7 +52,7 @@
                  Grid.Column="2"
                  Height="23"
                  VerticalContentAlignment="Center"
-                 Text="{Binding APIKey, UpdateSourceTrigger=PropertyChanged}" />
+                 Text="{Binding ApiKey, UpdateSourceTrigger=PropertyChanged}" />
         <Label Grid.Row="2" 
                Grid.Column="1" 
                HorizontalAlignment="Right">Marketplace ID:</Label>
