--- a/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
@@ -7,58 +7,127 @@
              xmlns:orderLookupSearchControl="clr-namespace:ShipWorks.OrderLookup.Controls.OrderLookupSearchControl"
              xmlns:scanpack="clr-namespace:ShipWorks.OrderLookup.ScanPack"
              xmlns:orderlookup="clr-namespace:ShipWorks.OrderLookup.Controls.OrderLookup"
+             xmlns:system="clr-namespace:System;assembly=mscorlib"
+             xmlns:ui="http://schemas.shipworks.com/ui"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance local:ScanToShipViewModel}"
+             d:DataContext="{d:DesignInstance local:ScanToShipViewModel, IsDesignTimeCreatable=False}"
              d:DesignHeight="450" d:DesignWidth="800"
              FontFamily="Tahoma"
              FontSize="11pt">
     <UserControl.Resources>
-        <Style TargetType="{x:Type TabControl}">
+        <ResourceDictionary>
+        <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/ShipWorks.UI;component/Styles/BlueSteel/BlueSteelStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <ui:VisibleWhenEqualToParameterConverter x:Key="VisibleWhenEqualToParameter"/>
+            <ui:BooleanToVisibilityConverter x:Key="BoolToVisHidden" Invert="False" False="Hidden"/>
+
+            <Style TargetType="{x:Type TabControl}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type TabControl}">
-                        <Grid>
+                        <Grid x:Name="templateRoot" ClipToBounds="True" SnapsToDevicePixels="True" KeyboardNavigation.TabNavigation="Local">
+
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="30px"/>
+                                <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
 
-                            <Border Grid.Row="0">
-                                <UniformGrid IsItemsHost="True" Rows="1"/>
-                            </Border>
+                            <Grid Margin="5 5 5 0">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
 
-                            <Border Grid.Row="1"
+                                <orderLookupSearchControl:OrderLookupSearchControl
+                                    Grid.Column="0"
+                                    DataContext="{Binding SearchViewModel}"
+                                    VerticalAlignment="Center"
+                                    Margin="10 5"/>
+
+                                <TabPanel Grid.Column="1"
+                                          Background="Transparent"
+                                          IsItemsHost="True"
+                                          Margin="2,2,2,0"
+                                          KeyboardNavigation.TabIndex="1"
+                                          Panel.ZIndex="1"
+                                          VerticalAlignment="Bottom"/>
+                            </Grid>
+
+                            <Border Grid.Column="0"
+                                    Grid.Row="1"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
                                     BorderThickness="{TemplateBinding BorderThickness}"
                                     Background="{TemplateBinding Background}"
-                                    BorderBrush="{TemplateBinding BorderBrush}">
-                                <ContentPresenter x:Name="PART_SelectedContentHost" ContentSource="SelectedContent"/>
+                                    KeyboardNavigation.DirectionalNavigation="Contained"
+                                    KeyboardNavigation.TabIndex="2"
+                                    KeyboardNavigation.TabNavigation="Local">
+                                <ContentPresenter x:Name="PART_SelectedContentHost" ContentTemplate="{TemplateBinding SelectedContentTemplate}" Content="{TemplateBinding SelectedContent}" ContentStringFormat="{TemplateBinding SelectedContentStringFormat}" ContentSource="SelectedContent" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                             </Border>
                         </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter Property="TextElement.Foreground" TargetName="templateRoot" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
         </Style>
+
         <Style TargetType="{x:Type TabItem}">
-            <Style.Triggers>
-                <Trigger Property="IsSelected" Value="False">
-                    <Setter Property="Background" Value="SteelBlue"/>
-                </Trigger>
-                <Trigger Property="IsSelected" Value="True">
-                    <Setter Property="Margin" Value="0"/>
-                </Trigger>
-            </Style.Triggers>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type TabItem}">
+                        <Grid x:Name="templateRoot" SnapsToDevicePixels="True" Height="32" Width="150">
+                            <Border x:Name="mainBorder" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1,1,1,0" Background="{TemplateBinding Background}" Margin="0"
+                                    CornerRadius="4 4 0 0">
+                                <Border x:Name="innerBorder" BorderBrush="#FFACACAC" BorderThickness="1,1,1,0" Background="White" Margin="-1" Opacity="0" CornerRadius="4 4 0 0" />
+                            </Border>
+                            <ContentPresenter x:Name="contentPresenter" ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}" ContentStringFormat="{TemplateBinding HeaderStringFormat}" ContentSource="Header" Focusable="False" HorizontalAlignment="{Binding HorizontalContentAlignment, RelativeSource={RelativeSource FindAncestor, AncestorLevel=1, AncestorType={x:Type ItemsControl}}}" Margin="{TemplateBinding Padding}" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" VerticalAlignment="{Binding VerticalContentAlignment, RelativeSource={RelativeSource FindAncestor, AncestorLevel=1, AncestorType={x:Type ItemsControl}}}"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="Background" TargetName="mainBorder">
+                                    <Setter.Value>
+                                        <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                                            <GradientStop Color="#FFECF4FC" Offset="0"/>
+                                            <GradientStop Color="#FFDCECFC" Offset="1"/>
+                                        </LinearGradientBrush>
+                                    </Setter.Value>
+                                </Setter>
+                                <Setter Property="BorderBrush" TargetName="mainBorder" Value="#FF7EB4EA"/>
+                            </Trigger>
+
+                            <Trigger Property="IsEnabled" Value="false">
+                                <Setter Property="Opacity" TargetName="contentPresenter" Value="0.56"/>
+                                <Setter Property="Background" TargetName="mainBorder" Value="#FFF0F0F0"/>
+                                <Setter Property="BorderBrush" TargetName="mainBorder" Value="#FFD9D9D9"/>
+                            </Trigger>
+
+                            <Trigger Property="IsSelected" Value="true">
+                                <Setter Property="Panel.ZIndex" Value="1"/>
+                                <Setter Property="Margin" Value="-2,-2,-2,0"/>
+                                <Setter Property="Opacity" TargetName="innerBorder" Value="1"/>
+                            </Trigger>
+                            
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
+
+
+        </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <orderLookupSearchControl:OrderLookupSearchControl
-            Grid.Row="0"
-            Margin="10"
-            DataContext="{Binding SearchViewModel}"/>
-        <TabControl Grid.Row="1" SelectedIndex="{Binding SelectedTab}">
+        <TabControl Grid.Row="0"
+                    SelectedIndex="{Binding SelectedTab}">
             <TabItem Header="Scan">
                 <scanpack:ScanPackControl DataContext="{Binding ScanPackViewModel}"/>
             </TabItem>
@@ -66,5 +135,44 @@
                 <orderlookup:MainOrderLookupControl DataContext="{Binding OrderLookupViewModel}"/>
             </TabItem>
         </TabControl>
+
+        <Grid Grid.Row="1" Margin="10 5 10 5">
+
+            <Grid.Visibility>
+                <Binding Path="SelectedTab" Converter="{StaticResource VisibleWhenEqualToParameter}">
+                    <Binding.ConverterParameter>
+                        <system:Int32>1</system:Int32>
+                    </Binding.ConverterParameter>
+                </Binding>
+            </Grid.Visibility>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <TextBlock
+                Margin="10 0 10 0"
+                Grid.Column="0"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center"
+                FontWeight="Bold"
+                Text="{Binding SearchViewModel.ShipmentModel.TotalCost, StringFormat='Total Cost: {0:c}', Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
+                <TextBlock.Visibility>
+                    <Binding Converter="{StaticResource VisibleWhenNotEqualToParameter}" Path="SearchViewModel.ShipmentModel.TotalCost">
+                        <Binding.ConverterParameter>
+                            <system:Decimal>0</system:Decimal>
+                        </Binding.ConverterParameter>
+                    </Binding>
+                </TextBlock.Visibility>
+            </TextBlock>
+
+            <Button 
+                Grid.Column="1"
+                Command="{Binding SearchViewModel.CreateLabelCommand}"
+                Content="Create Label"
+                Style="{StaticResource LargePrimaryButton}"
+                Visibility="{Binding SearchViewModel.ShowCreateLabel, Converter={StaticResource BoolToVisHidden}}"
+                HorizontalAlignment="Right"/>
+        </Grid>
     </Grid>
 </UserControl>
