--- a/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
@@ -51,6 +51,7 @@
         <TextBox Grid.Row="1" 
                  Grid.Column="2"
                  Height="23"
+                 MaxLength="100"
                  VerticalContentAlignment="Center"
                  Text="{Binding ApiKey, UpdateSourceTrigger=PropertyChanged}" />
         <Label Grid.Row="2" 
@@ -59,6 +60,7 @@
         <TextBox Grid.Row="2" 
                  Grid.Column="2"
                  Height="23"
+                 MaxLength="10"
                  VerticalContentAlignment="Center"
                  Text="{Binding MarketplaceID, UpdateSourceTrigger=PropertyChanged}" />
         <Label Grid.Row="3" 
@@ -67,10 +69,9 @@
         <TextBox Grid.Row="3" 
                  Grid.Column="2"
                  Height="23"
+                 MaxLength="50"
                  VerticalContentAlignment="Center"
                  Text="{Binding ShopUrl, UpdateSourceTrigger=PropertyChanged}" />
-        
-
         <TextBlock Grid.Column="2"
                    Grid.Row="4" 
                    TextWrapping="WrapWithOverflow">
