--- a/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Rakuten/RakutenStoreSetupControl.xaml
@@ -47,7 +47,7 @@
 
         <Label Grid.Row="1" 
                Grid.Column="1" 
-               HorizontalAlignment="Right">API Key:</Label>
+               HorizontalAlignment="Right">Auth Key:</Label>
         <TextBox Grid.Row="1" 
                  Grid.Column="2"
                  Height="23"
@@ -65,7 +65,7 @@
                  Text="{Binding MarketplaceID, UpdateSourceTrigger=PropertyChanged}" />
         <Label Grid.Row="3" 
                Grid.Column="1" 
-               HorizontalAlignment="Right">Shop URL:</Label>
+               HorizontalAlignment="Right">Shop Name:</Label>
         <TextBox Grid.Row="3" 
                  Grid.Column="2"
                  Height="23"
