--- a/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
+++ b/Code/ShipWorks.OrderLookup/ScanToShip/ScanToShipControl.xaml
@@ -11,7 +11,7 @@
              xmlns:ui="http://schemas.shipworks.com/ui"
              mc:Ignorable="d"
              d:DataContext="{d:DesignInstance local:ScanToShipViewModel, IsDesignTimeCreatable=False}"
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignHeight="450" d:DesignWidth="1000"
              FontFamily="Tahoma"
              FontSize="11pt">
     <UserControl.Resources>
@@ -33,7 +33,7 @@
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
 
-                            <Grid Margin="5 5 5 0">
+                            <Grid Margin="15 0 5 0">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="auto"/>
@@ -43,12 +43,14 @@
                                     Grid.Column="0"
                                     DataContext="{Binding SearchViewModel}"
                                     VerticalAlignment="Center"
-                                    Margin="10 5"/>
+                                    HorizontalAlignment="Left"
+                                    Margin="0 5"
+                                    Width="500"/>
 
                                 <TabPanel Grid.Column="1"
                                           Background="Transparent"
                                           IsItemsHost="True"
-                                          Margin="2,2,2,0"
+                                          Margin="5 0"
                                           KeyboardNavigation.TabIndex="1"
                                           Panel.ZIndex="1"
                                           VerticalAlignment="Bottom"/>
@@ -136,7 +138,7 @@
             </TabItem>
         </TabControl>
 
-        <Grid Grid.Row="1" Margin="10 5 10 5">
+        <Grid Grid.Row="1" Margin="5 5 10 0">
 
             <Grid.Visibility>
                 <Binding Path="SelectedTab" Converter="{StaticResource VisibleWhenEqualToParameter}">
@@ -156,6 +158,7 @@
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center"
                 FontWeight="Bold"
+                FontSize="20"
                 Text="{Binding SearchViewModel.ShipmentModel.TotalCost, StringFormat='Total Cost: {0:c}', Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
                 <TextBlock.Visibility>
                     <Binding Converter="{StaticResource VisibleWhenNotEqualToParameter}" Path="SearchViewModel.ShipmentModel.TotalCost">
@@ -171,6 +174,7 @@
                 Command="{Binding SearchViewModel.CreateLabelCommand}"
                 Content="Create Label"
                 Style="{StaticResource LargePrimaryButton}"
+                Width="300"
                 Visibility="{Binding SearchViewModel.ShowCreateLabel, Converter={StaticResource BoolToVisHidden}}"
                 HorizontalAlignment="Right"/>
         </Grid>
